# cuda_opencv

./: CMakeLists.txt  README.md  main.cpp
cuda/: cuda.cu  cuda_action.cpp  cuda_action.h  cuda_fuction.cpp  cuda_fuction.h
utils/: config.h  file_process.cpp  file_process.h
